Template Start Step 1

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
     "version": 1,
     "newProjectRoot": "projects",
     "projects": {
-        "doccube": {
+        "msxiwebapp": {
             "projectType": "application",
             "schematics": {
                 "@schematics/angular:component": {
@@ -17,7 +17,7 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:application",
                     "options": {
-                        "outputPath": "dist/doccube",
+                        "outputPath": "dist/msxiwebapp",
                         "index": "src/index.html",
                         "browser": "src/main.ts",
                         "polyfills": [
@@ -106,10 +106,10 @@
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "configurations": {
                         "production": {
-                            "buildTarget": "doccube:build:production"
+                            "buildTarget": "msxiwebapp:build:production"
                         },
                         "development": {
-                            "buildTarget": "doccube:build:development"
+                            "buildTarget": "msxiwebapp:build:development"
                         }
                     },
                     "defaultConfiguration": "development"
