--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
         "type": "chrome",
         "request": "launch",
         "name": "Debug Angular in Chrome",
-        "url": "http://127.0.0.1:4200",
+        "url": "http://localhost:4200",
         "webRoot": "${workspaceFolder}",
         "preLaunchTask": "ng serve",
         "pauseForSourceMap": true,
